# kde_colors

./: .gitignore  .pre-commit-config.yaml  .windsurfrules  404.html  README.md  Taskfile.yaml  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yml  release.yml
.windsurf/rules/: python-application.md  python.md  src-rules.md  taskfile.md  test-rules.md
architecture/: index.html
color-files/: index.html
docs/: architecture copy.md  architecture.md  color-files.md  index copy.md  index.md  license copy.md  memories.json  project_memories.md  python-style-guide.md  theme-files.md  user-guide.md
docs/project-files/: DEV-README.md  README.md
license/: index.html
project-files/: index.html
project-files/DEV-README/: index.html
reference/: index.html
reference/kde_colors/: index.html
reference/kde_colors/cli/: index.html
reference/kde_colors/cli/cli_arg_parser/: index.html
reference/kde_colors/cli/cli_runner/: index.html
reference/kde_colors/interfaces/: index.html
reference/kde_colors/interfaces/environment/: index.html
reference/kde_colors/interfaces/file_system/: index.html
reference/kde_colors/interfaces/output_formatter/: index.html
reference/kde_colors/interfaces/theme_loader/: index.html
reference/kde_colors/interfaces/xdg/: index.html
reference/kde_colors/services/: index.html
reference/kde_colors/services/environment/: index.html
reference/kde_colors/services/file_system/: index.html
reference/kde_colors/services/output_formatter/: index.html
reference/kde_colors/services/theme_loader/: index.html
reference/kde_colors/services/xdg/: index.html
scripts/: check_bash_in_README  check_md_bash  find-tech-debt.py  fix_package_init_files  gen_ref_pages.py
search/: search_index.json
src/kde_colors/: __init__.py  __main__.py  cli.py  example.py
src/kde_colors/cli/: cli_arg_parser.py  cli_runner.py
src/kde_colors/interfaces/: environment.py  file_system.py  output_formatter.py  theme_loader.py  xdg.py
src/kde_colors/services/: environment.py  file_system.py  output_formatter.py  theme_loader.py  xdg.py
tests/: profile_integration_tests.py
tests/e2e/: conftest.py  test_list_command.py  test_paths_command.py  test_theme_command.py
tests/integration/: test_cli_config_command.py  test_cli_list_command.py  test_cli_paths_command.py  test_cli_theme_command.py
tests/support/: __init__.py  environment_double.py  file_system_double.py  output_formatter_double.py  theme_loader_double.py  xdg_double.py
tests/unit/: test_example.py  test_file_system_double.py
tests/unit/cli/: test_cli_arg_parser.py  test_cli_runner.py
tests/unit/services/: test_environment.py  test_file_system.py  test_output_formatter.py  test_theme_loader.py  test_xdg.py
theme-files/: index.html
user-guide/: index.html
